// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emit validator for Object with array of numbers 1`] = `
"function isArrayOfNumbers(value: unknown): value is ArrayOfNumbers {
    return ((Object(value) === value) && ((((Array.isArray(value.scores)) && (value.scores.every(element => typeof element === 'number'))))))
}"
`;

exports[`emit validator for null 1`] = `
"function isNull(value: unknown): value is Null {
    return value === null
}"
`;

exports[`emit validator for null 2`] = `
"export function isNull(value: unknown): value is Null {
    return value === null
}"
`;

exports[`emit validator for reasonably complicated object type 1`] = `
"function isLead(value: unknown): value is Lead {
    return ((Object(value) === value) && ((typeof value.name === 'string'
&& (value.address === null
|| typeof value.address === 'string')
&& (value.kind === \\"business\\"
|| value.kind === \\"person\\"))))
}"
`;
